--- a/resouces/global.properties
+++ b/resouces/global.properties
@@ -1,6 +1,6 @@
 #Android Properties
-deviceName=R5CT71WCZSX
-platformVersion= 12
+deviceName=9d81727987d3
+platformVersion= 11
 platform=Android
 port=4723
 appiumServer=127.0.0.1
@@ -8,23 +8,5 @@ neovoPackageName=neovocommercefootware.android.staging
 neovoAppActivityName=neovocommercefootware.android.staging.activities.SplashActivity
 sandboxPackageName=plobalsandboxtest.android.staging
 sandboxAppActivityName=plobalsandboxtest.android.staging.activities.SplashActivity
-packageName2=com.sec.android.app.launcher
-appActivityName2=com.sec.android.app.launcher.activities.LauncherActivity
 orientation=PORTRAIT
 automationName=UiAutomator2
-userId=6367357113
-password=111111
-
-
-#iOS properties
-deviceNameIOS=admin's iPhone 12
-platformNameIOS=iOS
-useNewWDA=false
-platformVersionIOS=15.3.1
-udid=00008101-0019459C0C80801E
-sandboxBundleId=ios.staging.plobalsandboxtest
-neovoBundleId=ios.staging.neovocommercefootware
-xcodeOrgId=JKXP995X63
-xcodeSigningId=iPhone Developer
-isRealMobile=true
-automationNameIOS=XCUITest
